Add umami and get website id from env var

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script async src="https://umami.shebascaravan.com/script.js" data-website-id="24c26cf2-eeb1-4a64-a96b-4f3c3b588d11"></script>
+    <script async src="https://umami.shebascaravan.com/script.js" data-website-id="%VITE_UMAMI_WEBSITE_ID%"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
