Add dynamic robots meta for dev and prod

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,10 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta id="robots-meta" name="robots" content="noindex, nofollow">
     <title>Sheba's Caravan</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      const robotsMeta = document.getElementById("robots-meta")
+      const contentValue = `%MODE%` === "development" ? "noindex, nofollow" : "index, follow"
+      robotsMeta.setAttribute("content", contentValue)
+    </script>
   </body>
 </html>
