--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,16 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta id="robots-meta" name="robots" content="noindex, nofollow">
     <title>Sheba's Caravan</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      const robotsMeta = document.getElementById("robots-meta")
       const contentValue = `%MODE%` === "development" ? "noindex, nofollow" : "index, follow"
+      const robotsMeta = document.createElement("meta")
+      robotsMeta.setAttribute("name", "robots")
       robotsMeta.setAttribute("content", contentValue)
+      document.head.appendChild(robotsMeta)
     </script>
   </body>
 </html>
