Add social meta and dynamic SEO structured and metadata

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,10 +2,50 @@
 <html lang="en">
   <head>
     <script async src="https://umami.shebascaravan.com/script.js" data-website-id="%VITE_UMAMI_WEBSITE_ID%"></script>
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GOOGLE_ANALYTICS_ID%"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', '%VITE_GOOGLE_ANALYTICS_ID%');
+    </script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sheba's Caravan</title>
+
+    <title>Sheba's Caravan | 𐩣𐩮𐩧 𐩪𐩨𐩱</title>
+    <meta name="description" content="Handcrafted jewellery rooted in Ancient South Arabian and Yemenite traditions." />
+    <meta name="keywords" content="handcrafted jewellery, yemenite jewellery, ancient south arabian jewellery, traditional jewellery, filigree jewellery, ethical jewellery, queen of sheba, incense route, saba kingdom" />
+    <meta name="author" content="Sheba's Caravan" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shebascaravan.com/" />
+    <meta property="og:title" content="Sheba's Caravan | 𐩣𐩮𐩧 𐩪𐩨𐩱" />
+    <meta property="og:description" content="Handcrafted jewellery rooted in Ancient South Arabian and Yemenite traditions." />
+    <meta property="og:image" content="https://shebascaravan.com/favicon.png" />
+    <meta property="og:site_name" content="Sheba's Caravan | 𐩣𐩮𐩧 𐩪𐩨𐩱" />
+    <meta property="og:locale" content="en_GB" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://shebascaravan.com/" />
+    <meta property="twitter:title" content="Sheba's Caravan | 𐩣𐩮𐩧 𐩪𐩨𐩱" />
+    <meta property="twitter:description" content="Handcrafted jewellery rooted in Ancient South Arabian and Yemenite traditions." />
+    <meta property="twitter:image" content="https://shebascaravan.com/favicon.png" />
+
+    <meta name="theme-color" content="#1f2937" />
+    <meta name="msapplication-TileColor" content="#1f2937" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Sheba's Caravan | 𐩣𐩮𐩧 𐩪𐩨𐩱" />
+
+    <!-- Performance: Preconnect to external domains -->
+    <link rel="preconnect" href="https://umami.shebascaravan.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="canonical" href="https://shebascaravan.com/" />
   </head>
   <body>
     <div id="root"></div>
