Update tracker script config

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script defer src="https://umami.shebascaravan.com/script.js" data-website-id="%VITE_UMAMI_WEBSITE_ID%"></script>
+    <script defer src="/stats.js" data-website-id="%VITE_UMAMI_WEBSITE_ID%"></script>
     
     <script defer src="https://www.googletagmanager.com/gtag/js?id=%VITE_GOOGLE_ANALYTICS_ID%"></script>
     <script>
